# data-intake-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.claude/: README.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.devcontainer/: devcontainer.json  setup-ssh.sh
.github/: dependabot.yml
.github/workflows/: README.md  ci.yml  pre-commit.yml
alembic/: env.py
alembic/versions/: 388e69874bd6_add_job_lifecycle_fields.py  64f45bd56074_create_jobs_table.py  b313808e82f4_add_idempotency_key_unique_constraint.py  b8aca45600cf_add_job_retry_count_field.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/v1/: router.py
app/api/v1/endpoints/: jobs.py
app/core/: config.py  logging_config.yaml
app/core/logging/: __init__.py  context.py  setup.py
app/db/: session.py
app/db/models/: job.py
app/domains/: job.py
app/middleware/: logging.py
app/repositories/: job_repository.py
app/schemas/: job.py
app/services/: job_service.py
docs/: description.md  domains.md  implementation-plan.md
tests/: conftest.py
tests/factories/: job_factory.py
tests/fakes/: fake_job_repository.py
tests/integration/api/: test_jobs_routes.py
tests/integration/core/: test_logging_integration.py
tests/integration/repositories/: test_job_respository_db.py  test_sqlalchemy_job_repository.py
tests/unit/core/: test_logging_context.py  test_logging_setup.py
tests/unit/domains/: test_job.py
tests/unit/repositories/: test_fake_job_repository.py
tests/unit/services/: test_job_service.py
